About: A p5.js tropical cyclone simulation game

v20190217a:
    + Added track display modes, currently accessed by pressing the "T" key (mobile-friendly UI coming later)
        > There are 3 modes as of this update, which the "T" key cycles through
            > The first mode shows the tracks from first tropical formation to last tropical dissipation of systems active at the viewed tick
            > The second mode shows the full tracks of all systems active at the viewed tick, including extratropical systems
            > The third mode shows the tracks from first tropical formation to last tropical dissipation of all systems in the viewed season ("Season track display mode")
    * Capped storm icon rotation speed for storms exceeding 270 kts
v20190216a:
    + Added saving/loading methods for the StormData class
    * Storms no longer continue off the edge of the map, but are now killed as soon as the center reaches the edge
    * Changed how new instances of Storm and ActiveSystem are created when a new storm is spawned (optimization for saving/loading)
    * basin.activeSystems now contains ActiveSystem objects instead of Storm objects
    * The category of a storm at each point in its life is now calculated on the fly rather than stored as a property
v20190210a:
    + Added crash screen in case this crashes
    * Optimizations to Storm and ActiveSystem classes for saving/loading
v20190209a:
    + Added CPac and PAGASA name lists
    + Added selector for hurricane-strength term in basin creation menu
v20190207a:
    + Added EPac, WPac, and Aus name lists alongside the existing Atl list
        > Use the name list selector in the basin creation menu to access
        > Atl and EPac lists behave per year; WPac and Aus lists are sequential regardless of year (just as you'd expect)
    * Hurricane-strength tropical cyclones now come in 3 flavors: Cyclone, Hurricane, and Typhoon
        > Currently tied to the selected name list; to be made its own option later